Part of the previous commit

--- a/tex/p062.tex
+++ b/tex/p062.tex
@@ -47,7 +47,7 @@
 \vs p062 5:3 These first human beings (and their descendants) reached full maturity at 12 years of age and possessed a potential life span of about 75 years.
 \vs p062 5:4 Many new emotions early appeared in these human twins. They experienced admiration for both objects and other beings and exhibited considerable vanity. But the most remarkable advance in emotional development was the sudden appearance of a new group of really human feelings, the worshipful group, embracing awe, reverence, humility, and even a primitive form of gratitude. Fear, joined with ignorance of natural phenomena, is about to give birth to primitive religion.
 \vs p062 5:5 Not only were such human feelings manifested in these primitive humans, but many more highly evolved sentiments were also present in rudimentary form. They were mildly cognizant of pity, shame, and reproach and were acutely conscious of love, hate, and revenge, being also susceptible to marked feelings of jealousy.
-\vs p062 5:6 These first two humans --- the twins --- were a great trial to their Primates parents. They were so curious and adventurous that they nearly lost their lives on numerous occasions before they were 8 years old. As it was, they were rather well scarred up by the time they were 12.
+\vs p062 5:6 These first two humans --- the twins --- were a great trial to their Primates parents. They were so curious and adventurous that they nearly lost their lives on numerous occasions before they were 8 years old. As it was, they were rather well scarred up by the time they were twelve.
 \vs p062 5:7 Very early they learned to engage in verbal communication; by the age of 10 they had worked out an improved sign and word language of almost 50 ideas and had greatly improved and expanded the crude communicative technique of their ancestors. But try as hard as they might, they were able to teach only a few of their new signs and symbols to their parents.
 \vs p062 5:8 When about 9 years of age, they journeyed off down the river one bright day and held a momentous conference. Every celestial intelligence stationed on Urantia, including myself, was present as an observer of the transactions of this noontide tryst. On this eventful day they arrived at an understanding to live with and for each other, and this was the first of a series of such agreements which finally culminated in the decision to flee from their inferior animal associates and to journey northward, little knowing that they were thus to found the human race.
 \vs p062 5:9 While we were all greatly concerned with what these two little savages were planning, we were powerless to control the working of their minds; we did not --- could not --- arbitrarily influence their decisions. But within the permissible limits of planetary function, we, the Life Carriers, together with our associates, all conspired to lead the human twins northward and far from their hairy and partially tree\hyp{}dwelling people. And so, by reason of their own intelligent choice, the twins did \bibemph{migrate,} and because of our supervision they migrated \bibemph{northward} to a secluded region where they escaped the possibility of biologic degradation through admixture with their inferior relatives of the Primates tribes.
